--- a/src/bulma/sass/components/card.sass
+++ b/src/bulma/sass/components/card.sass
@@ -66,3 +66,7 @@ $card-footer-border-top: 1px solid $border !default
 .card
   .media:not(:last-child)
     margin-bottom: 0.75rem
+
+.card
+  &.is-fullheight
+    height: 100%
